# labs2022

./: README.md
lab1/: .markdownlint.json  README.md  lab1.md
lab1/soluzioni/: domath.cpp  hello.cpp  sum_a_b.cpp  sum_n.cpp
lab2/: lab2.md
lab2/soluzioni/: lcm.cpp  sum_n.cpp  taylor.cpp  taylor_opt.cpp
lab3/: README.md
lab3/soluzioni/: statistics.cpp
lab4/: README.md
lab4/soluzioni/: statistics.cpp  statistics_algo.cpp
lab5/: README.md
lab5/soluzioni/: CMakeLists.txt  main.cpp  statistics.cpp  statistics.hpp  statistics.test.cpp
lab6/: README.md
lab6/soluzioni/: CMakeLists.txt  main.cpp  statistics.cpp  statistics.hpp  statistics.test.cpp
lab7/: README.md
lab7/soluzioni/: CMakeLists.txt  chain.cpp  chain.hpp  chain.test.cpp  hooke.cpp  hooke.hpp  main-sfml.cpp  main.cpp
